# InvokePy

./: CHANGELOG.md  README.md  main.py  pyproject.toml
invokepy/: __init__.py  _command_dispatcher.py
