[tool.poetry]
name = "invokepy"
version = "0.0.1"
description = ""
authors = ["Vordy <61288579+VordyV@users.noreply.github.com>"]
readme = "README.md"
package-mode = true
packages = [{include = "invoke_py"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
